[WIP] changes for Android successful compilation

--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -109,9 +109,6 @@
     <Reference Include="System.Xml" />
     <Reference Include="System.Core" />
     <Reference Include="Xamarin.iOS" />
-    <Reference Include="AeroGear.Mobile.Core.Platform.iOS">
-      <HintPath>..\..\Core\Core.Platform.iOS\bin\Debug\AeroGear.Mobile.Core.Platform.iOS.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\tab_about.png" />
@@ -132,27 +129,9 @@
     <BundleResource Include="Resources\tab_feed%403x.png" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\Core\Core.Platform.iOS\Core.Platform.iOS.csproj">
-      <Project>{c5b8a6af-90d0-43dc-b097-a5f3ceb01e9f}</Project>
-      <Name>Core.Platform.iOS</Name>
-      <IsAppExtension>false</IsAppExtension>
-      <IsWatchApp>false</IsWatchApp>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Core\Core\Core.csproj">
-      <Project>{f1ea4bba-d775-45c0-99da-db0590bee87e}</Project>
-      <Name>Core</Name>
-    </ProjectReference>
     <ProjectReference Include="..\Example\Example.csproj">
       <Project>{F0217CFC-1E56-4703-AECE-EE4196A59B17}</Project>
       <Name>Example</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
-      <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
-      <Name>Auth</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\..\Auth\Auth.Platform.iOS\Auth.Platform.iOS.csproj">
-      <Project>{CBB87B9E-D526-46B1-B05A-AD3D383EACED}</Project>
-      <Name>Auth.Platform.iOS</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
@@ -161,12 +140,13 @@
     </ImageAsset>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS">
+      <Version>0.0.3</Version>
+    </PackageReference>
     <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.1.444934</Version>
+      <Version>2.5.1.527436</Version>
     </PackageReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Auth\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
