--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
+    <TargetFramework>netstandard1.4</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Acr.UserDialogs" Version="7.0.1" />
+    <PackageReference Include="AeroGear.Mobile.Auth" Version="0.0.2" />
+    <PackageReference Include="AeroGear.Mobile.Core" Version="0.0.3" />
     <PackageReference Include="ListDiff" Version="1.0.7" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
-    <PackageReference Include="Xamarin.Forms" Version="2.5.0.280555" />
-    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.3.4" />
-    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.3.4" />
-    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.4" />
+    <PackageReference Include="Xamarin.Forms" Version="2.5.1.527436" />
+    <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.3.6" />
+    <PackageReference Include="Xamarin.FFImageLoading.Transformations" Version="2.3.6" />
+    <PackageReference Include="Xamarin.FFImageLoading.Forms" Version="2.3.6" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="2.0.2" />
   </ItemGroup>
 
@@ -25,6 +26,8 @@
     </Compile>
     <Compile Update="Resources\StringResources.Designer.cs">
       <DependentUpon>StringResources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
     </Compile>
     <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Views\Pages\HomePage.xaml.cs">
       <DependentUpon>HomePage.xaml</DependentUpon>
@@ -100,9 +103,5 @@
     <None Remove="Resources\ag_background.svg" />
     <None Remove="Resources\ic_openid_connect.png" />
     <None Remove="Resources\mobile-services.json" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Core\Core\Core.csproj" />
-    <ProjectReference Include="..\..\Auth\Auth\Auth.csproj" />
   </ItemGroup>
 </Project>
