--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -8,7 +8,7 @@
     <OutputType>Library</OutputType>
     <RootNamespace>Example.Android</RootNamespace>
     <AssemblyName>Example.Android</AssemblyName>
-    <TargetFrameworkVersion>v8.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v8.1</TargetFrameworkVersion>
     <AndroidApplication>True</AndroidApplication>
     <AndroidResgenFile>Resources\Resource.designer.cs</AndroidResgenFile>
     <AndroidResgenClass>Resource</AndroidResgenClass>
@@ -29,9 +29,6 @@
     <AndroidSupportedAbis />
     <AndroidTlsProvider>btls</AndroidTlsProvider>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
-    <AotAssemblies>false</AotAssemblies>
-    <EnableLLVM>false</EnableLLVM>
-    <BundleAssemblies>false</BundleAssemblies>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
@@ -52,9 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="AeroGear.Mobile.Auth.Platform.Android">
-      <Version>0.0.6</Version>
-    </PackageReference>
+    
     <PackageReference Include="System.Json">
       <Version>4.4.0</Version>
     </PackageReference>
@@ -67,12 +62,16 @@
     <PackageReference Include="Xamarin.Forms">
       <Version>2.5.1.527436</Version>
     </PackageReference>
+    <PackageReference Include="JWT">
+      <Version>4.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Auth\AuthenticateOptionsProvider.cs" />
+    <Compile Include="Security\SecurityCheckProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -108,8 +107,55 @@
       <Project>{F0217CFC-1E56-4703-AECE-EE4196A59B17}</Project>
       <Name>Example</Name>
     </ProjectReference>
+  <ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
+    <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
+    <Name>Core.Platform.Android</Name>
+  </ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
+  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
+  <Name>Core</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
+  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
+  <Name>Auth</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
+  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
+  <Name>Auth.Platform.Android</Name>
+</ProjectReference><ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
+  <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
+  <Name>Core.Platform.Android</Name>
+</ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
+  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
+  <Name>Core</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
+  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
+  <Name>Auth</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
+  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
+  <Name>Auth.Platform.Android</Name>
+</ProjectReference><ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
+  <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
+  <Name>Core.Platform.Android</Name>
+</ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
+  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
+  <Name>Core</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
+  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
+  <Name>Auth</Name>
+</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
+  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
+  <Name>Auth.Platform.Android</Name>
+</ProjectReference><ProjectReference Include="..\..\Security\Security.csproj">
+  <Project>{AA2048E3-2324-4922-A7FE-C0589AF4B74F}</Project>
+  <Name>Security</Name>
+</ProjectReference>
+<ProjectReference Include="..\..\Security.Platform.Android\Security.Platform.Android.csproj">
+  <Project>{FABACD6F-AA16-47B2-96CD-6790DF9AE77F}</Project>
+  <Name>Security.Platform.Android</Name>
+</ProjectReference>
+</ItemGroup>
+  <ItemGroup />
+  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Security\" />
   </ItemGroup>
-  <ItemGroup />
-  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
