--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -107,50 +107,30 @@
       <Project>{F0217CFC-1E56-4703-AECE-EE4196A59B17}</Project>
       <Name>Example</Name>
     </ProjectReference>
-  <ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
-    <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
-    <Name>Core.Platform.Android</Name>
-  </ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
-  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
-  <Name>Core</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
-  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
-  <Name>Auth</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
-  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
-  <Name>Auth.Platform.Android</Name>
-</ProjectReference><ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
-  <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
-  <Name>Core.Platform.Android</Name>
-</ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
-  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
-  <Name>Core</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
-  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
-  <Name>Auth</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
-  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
-  <Name>Auth.Platform.Android</Name>
-</ProjectReference><ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
-  <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
-  <Name>Core.Platform.Android</Name>
-</ProjectReference><ProjectReference Include="..\..\Core\Core\Core.csproj">
-  <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
-  <Name>Core</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
-  <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
-  <Name>Auth</Name>
-</ProjectReference><ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
-  <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
-  <Name>Auth.Platform.Android</Name>
-</ProjectReference><ProjectReference Include="..\..\Security\Security.csproj">
-  <Project>{AA2048E3-2324-4922-A7FE-C0589AF4B74F}</Project>
-  <Name>Security</Name>
-</ProjectReference>
-<ProjectReference Include="..\..\Security.Platform.Android\Security.Platform.Android.csproj">
-  <Project>{FABACD6F-AA16-47B2-96CD-6790DF9AE77F}</Project>
-  <Name>Security.Platform.Android</Name>
-</ProjectReference>
+    <ProjectReference Include="..\..\Security\Security.Platform.Android\Security.Platform.Android.csproj">
+      <Project>{FABACD6F-AA16-47B2-96CD-6790DF9AE77F}</Project>
+      <Name>Security.Platform.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Security\Security\Security.csproj">
+      <Project>{E6A4E78F-25B7-4D82-89A8-F394B82E557A}</Project>
+      <Name>Security</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Core\Core.Platform.Android\Core.Platform.Android.csproj">
+      <Project>{E30A4499-8EF8-4542-AAF9-C9D30A543752}</Project>
+      <Name>Core.Platform.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Core\Core\Core.csproj">
+      <Project>{F1EA4BBA-D775-45C0-99DA-DB0590BEE87E}</Project>
+      <Name>Core</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Auth\Auth.Platform.Android\Auth.Platform.Android.csproj">
+      <Project>{ACEB8935-989F-46CA-8F0F-FBA3B358C70C}</Project>
+      <Name>Auth.Platform.Android</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Auth\Auth\Auth.csproj">
+      <Project>{55FF3B02-07D1-46F3-B0D5-584D3B98467E}</Project>
+      <Name>Auth</Name>
+    </ProjectReference>
 </ItemGroup>
   <ItemGroup />
   <ItemGroup />
