--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -91,44 +91,46 @@
     <CodesignEntitlements>Entitlements.plist</CodesignEntitlements>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Main.cs"/>
-    <Compile Include="AppDelegate.cs"/>
-    <None Include="Entitlements.plist"/>
-    <None Include="Info.plist"/>
-    <Compile Include="Properties\AssemblyInfo.cs"/>
-    <Compile Include="Auth\AuthenticateOptionsProvider.cs"/>
-    <Compile Include="Security\SecurityCheckProvider.cs"/>
+    <Compile Include="Main.cs" />
+    <Compile Include="AppDelegate.cs" />
+    <None Include="Entitlements.plist" />
+    <None Include="Info.plist" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Auth\AuthenticateOptionsProvider.cs" />
+    <Compile Include="Security\SecurityCheckProvider.cs" />
   </ItemGroup>
   <ItemGroup>
-    <InterfaceDefinition Include="Resources\LaunchScreen.storyboard"/>
-    <BundleResource Include="Resources\aerogear_icon.png"/>
-    <BundleResource Include="Resources\ic_view_headline%403x.png"/>
-    <BundleResource Include="Resources\ic_view_headline%402x.png"/>
-    <BundleResource Include="Resources\ic_view_headline.png"/>
+    <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
+    <BundleResource Include="Resources\aerogear_icon.png" />
+    <BundleResource Include="Resources\ic_view_headline%403x.png" />
+    <BundleResource Include="Resources\ic_view_headline%402x.png" />
+    <BundleResource Include="Resources\ic_view_headline.png" />
+    <BundleResource Include="Resources\ic_passed.png" />
+    <BundleResource Include="Resources\ic_warning.png" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System"/>
-    <Reference Include="System.Xml"/>
-    <Reference Include="System.Core"/>
-    <Reference Include="Xamarin.iOS"/>
+    <Reference Include="System" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Core" />
+    <Reference Include="Xamarin.iOS" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_about.png"/>
+    <BundleResource Include="Resources\tab_about.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_about%402x.png"/>
+    <BundleResource Include="Resources\tab_about%402x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_about%403x.png"/>
+    <BundleResource Include="Resources\tab_about%403x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_feed.png"/>
+    <BundleResource Include="Resources\tab_feed.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_feed%402x.png"/>
+    <BundleResource Include="Resources\tab_feed%402x.png" />
   </ItemGroup>
   <ItemGroup>
-    <BundleResource Include="Resources\tab_feed%403x.png"/>
+    <BundleResource Include="Resources\tab_feed%403x.png" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Example\Example.csproj">
@@ -149,16 +151,28 @@
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
-    
-    
-    
-    
-    
-    
-  <PackageReference Include="AeroGear.Mobile.Core" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Core.Platform.iOS" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Auth" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Security" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Security.Platform.iOS" Version="1.0.0-alpha"/></ItemGroup>
-  <ItemGroup/>
-  <ItemGroup>
-    <Folder Include="Security\"/>
+    <PackageReference Include="AeroGear.Mobile.Security.Platform.iOS">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Security">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth.Platform.iOS">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Auth">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="AeroGear.Mobile.Core.Platform.iOS">
+      <Version>1.0.0-alpha</Version>
+    </PackageReference>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets"/>
+  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Security\" />
+  </ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
