--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -26,7 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
-    <AndroidSupportedAbis />
+    <AndroidSupportedAbis/>
     <AndroidTlsProvider>btls</AndroidTlsProvider>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
@@ -42,11 +42,11 @@
     <AndroidUseSharedRuntime>false</AndroidUseSharedRuntime>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Mono.Android" />
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Xml" />
+    <Reference Include="Mono.Android"/>
+    <Reference Include="System"/>
+    <Reference Include="System.Core"/>
+    <Reference Include="System.Xml.Linq"/>
+    <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
     
@@ -65,57 +65,45 @@
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth.Platform.Android">
-      <Version>0.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core">
-      <Version>0.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Auth">
-      <Version>0.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Core.Platform.Android">
-      <Version>0.0.6</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security">
-      <Version>0.0.7</Version>
-    </PackageReference>
-    <PackageReference Include="AeroGear.Mobile.Security.Platform.Android">
-      <Version>0.0.7</Version>
-    </PackageReference>
+    
+    
+    
+    
+    
+    
+  <PackageReference Include="AeroGear.Mobile.Core" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Core.Platform.Android" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Auth" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Auth.Platform.Android" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Security" Version="1.0.0-alpha"/><PackageReference Include="AeroGear.Mobile.Security.Platform.Android" Version="1.0.0-alpha"/></ItemGroup>
+  <ItemGroup>
+    <Compile Include="MainActivity.cs"/>
+    <Compile Include="Properties\AssemblyInfo.cs"/>
+    <Compile Include="Resources\Resource.designer.cs"/>
+    <Compile Include="Auth\AuthenticateOptionsProvider.cs"/>
+    <Compile Include="Security\SecurityCheckProvider.cs"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="MainActivity.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Resources\Resource.designer.cs" />
-    <Compile Include="Auth\AuthenticateOptionsProvider.cs" />
-    <Compile Include="Security\SecurityCheckProvider.cs" />
+    <None Include="Resources\AboutResources.txt"/>
+    <None Include="Assets\AboutAssets.txt"/>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\AboutResources.txt" />
-    <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png"/>
+    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png"/>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png"/>
+    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher_round.png"/>
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png"/>
+    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher_round.png"/>
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png"/>
+    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher_round.png"/>
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png"/>
+    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher_round.png"/>
+    <AndroidResource Include="Resources\drawable\aerogear_icon.png"/>
+    <AndroidResource Include="Resources\drawable\ic_openid.png"/>
+    <AndroidResource Include="Resources\drawable\ag_background.png"/>
   </ItemGroup>
   <ItemGroup>
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xxxhdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xxhdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-xhdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-mdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher.png" />
-    <AndroidResource Include="Resources\mipmap-hdpi\ic_launcher_round.png" />
-    <AndroidResource Include="Resources\drawable\aerogear_icon.png" />
-    <AndroidResource Include="Resources\drawable\ic_openid.png" />
-    <AndroidResource Include="Resources\drawable\ag_background.png" />
+    <None Include="Properties\AndroidManifest.xml"/>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Properties\AndroidManifest.xml" />
-  </ItemGroup>
-  <ItemGroup>
-    <AndroidResource Include="Resources\layout\Tabbar.axml" />
-    <AndroidResource Include="Resources\layout\Toolbar.axml" />
+    <AndroidResource Include="Resources\layout\Tabbar.axml"/>
+    <AndroidResource Include="Resources\layout\Toolbar.axml"/>
     <AndroidResource Include="Resources\values\styles.xml">
       <SubType>Designer</SubType>
     </AndroidResource>
@@ -126,10 +114,10 @@
       <Name>Example</Name>
     </ProjectReference>
 </ItemGroup>
-  <ItemGroup />
-  <ItemGroup />
+  <ItemGroup/>
+  <ItemGroup/>
   <ItemGroup>
-    <Folder Include="Security\" />
+    <Folder Include="Security\"/>
   </ItemGroup>
-  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
+  <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets"/>
 </Project>
