--- a/Example.iOS/Info.plist
+++ b/Example.iOS/Info.plist
@@ -23,7 +23,7 @@
 	<key>MinimumOSVersion</key>
 	<string>10.3</string>
 	<key>CFBundleDisplayName</key>
-	<string>Example</string>
+	<string>AeroGear Xamarin Showcase</string>
 	<key>CFBundleIdentifier</key>
 	<string>org.aerogear.xamarin.Example</string>
 	<key>CFBundleVersion</key>
