--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -108,6 +108,7 @@
     <BundleResource Include="Resources\ic_view_headline.png" />
     <BundleResource Include="Resources\ic_passed.png" />
     <BundleResource Include="Resources\ic_warning.png" />
+    <BundleResource Include="Resources\ic_refresh.png" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -146,9 +147,6 @@
   </ItemGroup>
   <ItemGroup>
     
-    <PackageReference Include="Xamarin.Forms">
-      <Version>2.5.1.527436</Version>
-    </PackageReference>
     <PackageReference Include="JWT">
       <Version>4.0.0</Version>
     </PackageReference>
@@ -169,6 +167,12 @@
     </PackageReference>
     <PackageReference Include="AeroGear.Mobile.Core.Platform.iOS">
       <Version>1.0.0-alpha</Version>
+    </PackageReference>
+    <PackageReference Include="SuaveControls.FloatingActionButton">
+      <Version>2018.1.5</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.0.0.561731</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup />
