--- a/Example.iOS/Example.iOS.csproj
+++ b/Example.iOS/Example.iOS.csproj
@@ -99,6 +99,9 @@
     <Compile Include="Auth\AuthenticateOptionsProvider.cs" />
     <Compile Include="Security\SecurityCheckProvider.cs" />
     <Compile Include="Security\UnsecureAlertWarning.cs" />
+    <Compile Include="Resources\SecurityResources.Designer.cs">
+      <DependentUpon>SecurityResources.resx</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -178,6 +181,12 @@
   <ItemGroup />
   <ItemGroup>
     <Folder Include="Security\" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Resources\SecurityResources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>SecurityResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
