--- a/Example.Android/Example.Android.csproj
+++ b/Example.Android/Example.Android.csproj
@@ -26,6 +26,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <AndroidLinkMode>None</AndroidLinkMode>
+    <AndroidSupportedAbis />
     <AndroidTlsProvider>btls</AndroidTlsProvider>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
     <JavaMaximumHeapSize>1G</JavaMaximumHeapSize>
@@ -78,11 +79,14 @@
     <PackageReference Include="SuaveControls.FloatingActionButton">
       <Version>2018.1.5</Version>
     </PackageReference>
-    <PackageReference Include="Xamarin.Forms">
-      <Version>3.0.0.561731</Version>
-    </PackageReference>
     <PackageReference Include="System.Json">
       <Version>4.5.0</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.FFImageLoading.Forms">
+      <Version>2.4.3.840</Version>
+    </PackageReference>
+    <PackageReference Include="Xamarin.Forms">
+      <Version>3.0.0.561731</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
@@ -130,7 +134,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Example\Example.csproj">
-      <Project>{F0217CFC-1E56-4703-AECE-EE4196A59B17}</Project>
+      <Project>{30C55998-0E1C-4AE9-A8A9-58815C2D5048}</Project>
       <Name>Example</Name>
     </ProjectReference>
 </ItemGroup>
