--- a/Example/Example.csproj
+++ b/Example/Example.csproj
@@ -13,9 +13,9 @@
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.583944" />
     <PackageReference Include="Xamarin.FFImageLoading.Svg.Forms" Version="2.4.3.840" />
     <PackageReference Include="Xam.Plugins.Forms.ImageCircle" Version="3.0.0.5" />
-    <PackageReference Include="AeroGear.Mobile.Security" Version="1.1.0-alpha.3" />
-    <PackageReference Include="AeroGear.Mobile.Auth" Version="1.1.0-alpha.3" />
-    <PackageReference Include="AeroGear.Mobile.Core" Version="1.1.0-alpha.3" />
+    <PackageReference Include="AeroGear.Mobile.Security" Version="2.0.1" />
+    <PackageReference Include="AeroGear.Mobile.Auth" Version="2.0.1" />
+    <PackageReference Include="AeroGear.Mobile.Core" Version="2.0.1" />
   </ItemGroup>
 
   <ItemGroup>
